fix: fix bug on date and time
